Update JlinkPlugin